<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditAboutActivity">

    <FrameLayout
        android:id="@+id/layout_EditAbout_ChangePassword"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="3dp"
        android:visibility="gone"
        tools:visibility="gone">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha=".5"
            android:visibility="visible"
            app:srcCompat="@color/wintecDarkGrey"
            tools:ignore="ContentDescription" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:paddingTop="16dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/label_EditAbout_PasswordPrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginBottom="8dp"
                android:labelFor="@id/field_ViewStudents_Password"
                android:text="@string/prompt_password"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintBottom_toTopOf="@+id/field_EditAbout_Password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/field_EditAbout_Password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/label_EditAbout_PasswordConfirmPrompt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/label_EditAbout_PasswordConfirmPrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginBottom="8dp"
                android:labelFor="@id/field_EditAbout_PasswordConfirm"
                android:text="@string/password_confirm_prompt"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintBottom_toTopOf="@id/field_EditAbout_PasswordConfirm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/field_EditAbout_PasswordConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/layout_EditAbout_UpdatePasswordButtons"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:targetApi="o" />

            <LinearLayout
                android:id="@+id/layout_EditAbout_UpdatePasswordButtons"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="bottom|fill_horizontal"
                android:orientation="horizontal"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent">

                <Button
                    android:id="@+id/button_EditAbout_ChangePasswordCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@android:string/cancel" />

                <Button
                    android:id="@+id/button_EditAbout_ChangePasswordConfirm"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@android:string/ok" />
            </LinearLayout>
        </android.support.constraint.ConstraintLayout>
    </FrameLayout>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"></android.support.v7.widget.Toolbar>

            <include
                layout="@layout/header"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/appbar"
        tools:layout_editor_absoluteX="8dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/label_EditAbout_BuiltForPrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/built_for_prompt" />

            <TextView
                android:id="@+id/label_EditAbout_BuiltFor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/built_for" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:gravity="center">

            <TextView
                android:id="@+id/label_EditAbout_AppVersionPrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:labelFor="@id/field_EditAbout_AppVersion"
                android:text="@string/app_version_prompt" />

            <EditText
                android:id="@+id/field_EditAbout_AppVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="numberDecimal" tools:targetApi="o" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/label_EditAbout_OSPrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/os_prompt" />

            <TextView
                android:id="@+id/label_EditAbout_OS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="7.1.1 (Example Text)" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/label_EditAbout_DevPrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/dev_prompt" />

            <TextView
                android:id="@+id/label_EditAbout_Dev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dev" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/label_EditAbout_Disclaimer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="64dp"
        android:text="@string/disclaimer"
        app:layout_constraintBottom_toTopOf="@+id/footer_EditAbout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/footer_EditAbout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="8dp">

        <Button
            android:id="@+id/button_EditAbout_Cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/wintecYellow"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/button_EditAbout_Save"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/wintecYellow"
            android:text="@string/save" />
    </LinearLayout>

    <Button
        android:id="@+id/button_EditAbout_ChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/change_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

</android.support.constraint.ConstraintLayout>